fix wifi driver compilation issue

--- a/poky/meta-gumstix-extras/conf/bblayers.conf.sample
+++ b/poky/meta-gumstix-extras/conf/bblayers.conf.sample
@@ -16,6 +16,7 @@ BBLAYERS ?= " \
   ##COREBASE##/meta-openembedded/meta-webserver \
   ##COREBASE##/meta-gumstix \
   ##COREBASE##/meta-gumstix-extras \
+  ##COREBASE##/meta-epuck \
   ##COREBASE##/meta-ros/meta-ros1-melodic \
   ##COREBASE##/meta-ros/meta-ros1 \
   ##COREBASE##/meta-ros/meta-ros-common \
